--- a/css/typography.css
+++ b/css/typography.css
@@ -5,7 +5,7 @@
 header h1, figure h1 {font: 700 1.4em/46px 'Titillium Web', sans-serif;}
 figure p  {font: 400 1.35em/40px 'Roboto Condensed', sans-serif;}
 
-#nav li  {font-family:'Roboto Condensed', sans-serif;font-weight:600;}
+#nav li  {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
 .inner figure p {font: 400 1.15em/2.2em 'Roboto Condensed', sans-serif;color:#888;}
 .inner a {font: 400 0.85em/0em 'Roboto Condensed', sans-serif;color:#777;}
 .text p {font: 400 1.05em/2.1em 'PT Sans', sans-serif;}
@@ -15,6 +15,8 @@ figure p  {font: 400 1.35em/40px 'Roboto Condensed', sans-serif;}
 article > p {font: 400 1em/2.1em 'Titillium Web', sans-serif;color:#888;}
 article > p a {font: 400 0.85em/0em 'Titillium Web', sans-serif;color:#888;}
 article > h3, article > h4, article.blanc > h4 {font: 600 0.85em 'Titillium Web', sans-serif;text-transform: uppercase;color:#999;font-weight:600;}
+
+.inner > figure p, .inner > figure p a {font: 400 1.4em/2.5em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
 
 .sp-slider > li h1  {font-family:'PT Sans', sans-serif;font-weight:300;}
 #s-sign h2, #s-text h2, #s-liter h2, #s-video h2{font: 500 0.80em/25px 'Roboto Condensed', sans-serif;}
