--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -17,12 +17,13 @@ header[role="banner"] ul li, ul li a {list-style:none;margin:0;float:left;}
 box-shadow: 0 1px 25px #111;}
 #strip {position: relative;z-index: 3;width: 100%;height: 0px;color: #999;background:#020109 url('../images/bg-under-video.png') top left repeat; overflow: hidden;}
 #press {position: relative;z-index: 3;width: 100%;height: 0px;color: #999;overflow: hidden;display:inline-block;}
-#switch-navigation {display:block;width:100%;color:#555;padding:0;border-top:1px solid rgba(255,255,255,.1);height:5em;}
+#switch-navigation {display:block;width:100%;color:#555;margin:à;padding:0;border-top:1px solid rgba(255,255,255,.1);height:5em;}
+#switch-navigation {margin:0 0 1em;padding:0 1em;text-align:center;}
 
 /* TODO FUNCTION NAV
 -------------------------------------------------- */
-#nav, #navA {position: absolute;top:0;left:15em;z-index: 3;}
-#nav ul,  #navA ul{list-style:none;margin:0.3em 4em 0 0;padding:4em 4em 0;text-align:left;}
+#nav, #navA {position:relative;top:0;left:auto;z-index: 3;}
+#nav ul,  #navA ul{list-style:none;margin:0.3em 2em 0 0;padding:0em 4em 0;text-align:left;}
 #nav li, #navA li {margin:0;padding:0 0.5em;text-align:center;display:inline-block;width:auto;text-transform:uppercase;letter-spacing:2px;}
 nav a {text-decoration:none;color:#7d7d79;padding:5px 0;display:block;}
 a.signs, a#signs, a.txt, a#txt, a.liter, a#liter, a.vid, a#vid, a.signers, a#signers, a.texts, a#texts, a.liters, a#liters, a.vids, a#vids{cursor:pointer;display: none;width:100%;text-decoration:none;display:inline-block;}
