--- a/css/typography.css
+++ b/css/typography.css
@@ -1,7 +1,11 @@
+
+/* TODO TYPOGRAPHY
+-------------------------------------------------- */
+
 header h1, figure h1 {font: 700 1.4em/46px 'Titillium Web', sans-serif;}
 figure p  {font: 400 1.35em/40px 'Roboto Condensed', sans-serif;}
 
-#switch-navigation  {font: 400 1em 'Roboto Condensed', sans-serif;font-weight:200;text-transform: uppercase;color:#888;letter-spacing:2px;}
+#switch-navigation p {font: 400 1.5em/2.1em 'Roboto Condensed', sans-serif;text-transform: uppercase;color:#888;letter-spacing:2px;font-weight:800;}
 
 #navA li  {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
 .inner figure p {font: 400 1.15em/2.2em 'Roboto Condensed', sans-serif;color:#888;}
