--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -5,6 +5,7 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2
 /* HEADER HEAD CONTENT LAYOUT
 -------------------------------------------------- */
 body .inner {width:100% inherit;}
+body {width:100% inherit;background:#020109 url('../images/bg-under-video.png') top left repeat;}
 header[role="banner"] {margin:0;padding:2.3% 0 0 3.2%;width:100%;display:inline-block;}
 header[role="banner"] ul li, ul li a {list-style:none;margin:0;float:left;}
 
@@ -15,7 +16,7 @@ header[role="banner"] ul li, ul li a {list-style:none;margin:0;float:left;}
 
 #block-video {position: relative;top: 0;left: 0;width: 100%;z-index:100;box-shadow:0px 0px 6px rgba(0,0,0,0.4);-moz-box-sizing:border-box;box-sizing:border-box;
 box-shadow: 0 1px 25px #111;}
-#strip {position: relative;z-index: 3;width: 100%;height: 0px;color: #999;background:#020109 url('../images/bg-under-video.png') top left repeat; overflow: hidden;}
+#strip {position: relative;z-index: 3;width: 100%;height: 0px;color: #999;background:#020109 url('../images/bg-under-video.png') top left repeat-x; overflow: hidden;}
 #press {position: relative;z-index: 3;width: 100%;height: 0px;color: #999;overflow: hidden;display:inline-block;}
 #switch-navigation {display:block;width:100%;color:#555;margin:à;padding:0;border-top:1px solid rgba(255,255,255,.1);height:5em;}
 #switch-navigation {margin:0 0 1em;padding:0 1em;text-align:center;}
