--- a/css/typography.css
+++ b/css/typography.css
@@ -7,6 +7,8 @@ figure p  {font: 400 1.35em/40px 'Roboto Condensed', sans-serif;}
 
 #switch-navigation p {font: 400 1.5em/2.1em 'Roboto Condensed', sans-serif;text-transform: uppercase;color:#888;letter-spacing:2px;font-weight:600;}
 
+.text span {font: 400 0.95em/1.5em 'Roboto Condensed', sans-serif;text-transform: uppercase;color:#666;letter-spacing:4px;font-weight:600;}
+
 #navA li  {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
 .inner figure p {font: 400 1.15em/2.2em 'Roboto Condensed', sans-serif;color:#888;}
 .inner a {font: 400 0.85em/0em 'Roboto Condensed', sans-serif;color:#777;}
@@ -22,4 +24,3 @@ article > h3, article > h4, article.blanc > h4 {font: 600 0.85em 'Titillium Web'
 
 .sp-slider > li h1  {font-family:'PT Sans', sans-serif;font-weight:300;}
 #s-sign h2, #s-text h2, #s-liter h2, #s-video h2{font: 500 0.80em/25px 'Roboto Condensed', sans-serif;}
-
