--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -205,13 +205,11 @@ article.blanc > p
 {position:absolute;top:0.2em;right:0;z-index:9999;margin:3.5em 0 0.5em 0;padding:1.5em 0 2.5em 1.4em;line-height:1em;background:#020109;width:inherit;color:#fff;text-transform:lowercase;letter-spacing:2px;}
 article.blanc > a, article.blanc > p a:hover {color:#fff;text-transform:lowercase;text-decoration: none;}
 
-.pageA > figure
-{position:absolute;z-index:9999;top:7%;padding:0 0.5em 0 0.5em;line-height:2.2em;width:auto;color:#999;text-transform:uppercase;letter-spacing:2px;}
-.pageA > h2
-{position:absolute;z-index:9999;top:-1.5%;padding:0 0.5em 0.5em;line-height:2.2em;width:auto;color:#999;text-transform:uppercase;letter-spacing:2px;}
-
+/* TODO SLIDE DEV BLOCK BDD À RATIONALISER
+--------------------------------------------------
 #desc-s-sign,#desc-s-text,#desc-s-liter,#desc-s-video
 {float:right;display:inline-block;margin:6.5em 0 0 60%;padding:2.5em 1em 2em 2em;line-height:3.2em;background:#020109;color:#fff;text-transform:uppercase;letter-spacing:2px;}
+*/
 
 #slideIndex{position: absolute;width: 100%;bottom:0;text-align: center;z-index: 100;background:#111111;}
 #slideIndex .idxPage{
