--- a/css/typography.css
+++ b/css/typography.css
@@ -22,5 +22,7 @@ article > h3, article > h4, article.blanc > h4 {font: 600 0.85em 'Titillium Web'
 
 .inner > figure p, .inner > figure p a {font: 400 1.4em/2.5em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
 
+.vign {font: 600 1em/2.1em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
+
 .sp-slider > li h1  {font-family:'PT Sans', sans-serif;font-weight:300;}
 #s-sign h2, #s-text h2, #s-liter h2, #s-video h2{font: 500 0.80em/25px 'Roboto Condensed', sans-serif;}
