--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -25,8 +25,7 @@ box-shadow: 0 1px 25px #111;}
 -------------------------------------------------- */
 #nav, #navA {position:relative;top:0;left:auto;z-index: 3;}
 #nav ul,  #navA ul{list-style:none;margin:0.3em 2em 0 0;padding:0em 4em 0;text-align:left;}
-#nav li, #navA li {margin:0;padding:0 0.5em;text-align:center;display:inline-block;width:auto;text-transform:uppercase;letter-spacing:2px;}
-nav a {text-decoration:none;color:#7d7d79;padding:5px 0;display:block;}
+#nav li, #navA li {margin:0;padding:0 0.5em;text-align:center;display:inline-block;width:auto;}
 a.signs, a#signs, a.txt, a#txt, a.liter, a#liter, a.vid, a#vid, a.signers, a#signers, a.texts, a#texts, a.liters, a#liters, a.vids, a#vids{cursor:pointer;display: none;width:100%;text-decoration:none;display:inline-block;}
 nav a#vids, li.active a#vids, li a#vid{}
 #nav ul li.active a, nav a:hover {color:#fff;}
@@ -49,7 +48,7 @@ div > img.tempo {float:right;margin:3em;padding:20em 0 25em 0 ;width: 100%;heigh
 
 img.rules {margin:-0.3em -0.7em 0 0 ;padding:0;text-align:center;width:auto;height:2.1em;}
 p.inners {float:right;margin:0 8em 1em 12em;padding:0 0.5em;text-align:center;font-size: 100%;}
-p.inners a {margin:0 0 1em;padding:0 0.5em;font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;}
+p.inners a {margin:0 0 1em;padding:0 0.5em;}
 
  /* RESPONSIVE CSS  TODO  & RETINA  TODO
 -------------------------------------------------- */
@@ -192,6 +191,7 @@ input.sp-selector-5:checked ~ .sp-content .sp-slider > li:nth-child(5){
 section #section{position:absolute;width:100%;height:100%;overflow:hidden;}
 #s-sign, #s-text, #s-liter, #s-video {position:fixed;width:100%;height:100%;overflow:hidden;background:#020109 url('../images/retina/bg-sign@2x.png') top left repeat-x;}
 #s-signA, #s-signB, #s-signC, #s-signD {position:fixed;width:100%;height:100%;overflow:hidden;}
+#ifsign, #iftext, #ifliter, #ifvideo {float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;}
 .pageA,.pageB,.pageC,.pageD{position:relative;z-index:-1;width:100%;height:100%;top:0;}
 aside > div img {float:left;margin:-1.5em 0 0 0;height:80%;}
 .page{position:relative;z-index:1;width:100%;height:100%;top:0;}
@@ -201,12 +201,12 @@ figure > h1 {position:absolute;z-index:9999;top:7%;padding:0.5em 0.9em;backgroun
 .vign {position:relative;z-index:9999;top:12em;padding:0.5em 0.9em;background-color:#020109;width:13em;}
 .motif {float:left;margin:1.5em 0 1.5em 0;padding:3.5em 0 0 0;}
 article.blanc > h4
-{position:absolute;top:0.7em;right:-3em;z-index:9999;margin:1em 2.8em 1em 0;padding:1em 2.5em 3em 1.5em;line-height:2.2em;background:#020109;width:auto;color:#999;text-transform:uppercase;letter-spacing:2px;}
+{position:absolute;top:0.7em;right:-3em;z-index:9999;margin:1em 2.8em 1em 0;padding:1em 2.5em 3em 1.5em;line-height:2.2em;background:#020109;width:auto;color:#999;}
 article.blanc > p
-{position:absolute;top:0.2em;right:0;z-index:9999;margin:3.5em 0 0.5em 0;padding:1.5em 0 2.5em 1.4em;line-height:1em;background:#020109;width:inherit;color:#fff;text-transform:lowercase;letter-spacing:2px;}
+{position:absolute;top:0.2em;right:0;z-index:9999;margin:3.5em 0 0.5em 0;padding:1.5em 0 2.5em 1.4em;line-height:1em;background:#020109;width:inherit;color:#fff;}
 article.blanc > a, article.blanc > p a:hover {color:#fff;text-transform:lowercase;text-decoration: none;}
 
-#ifsign, #iftext, #ifliter, #ifvideo {float:none;margin-left:30%;padding-top: 22.734375%;width:40%; height:auto;}
+
 
 /* TODO SLIDE DEV BLOCK BDD À RATIONALISER
 --------------------------------------------------
