--- a/css/typography.css
+++ b/css/typography.css
@@ -9,7 +9,8 @@ figure p  {font: 400 1.35em/40px 'Roboto Condensed', sans-serif;}
 
 .text span {font: 400 0.95em/1.5em 'Roboto Condensed', sans-serif;text-transform: uppercase;color:#666;letter-spacing:4px;font-weight:600;}
 
-#navA li  {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
+#nav li,  #navA li  {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
+nav a {text-decoration:pointer;color:#7d7d79;}
 .inner figure p {font: 400 1.15em/2.2em 'Roboto Condensed', sans-serif;color:#888;}
 .inner a {font: 400 0.85em/0em 'Roboto Condensed', sans-serif;color:#777;}
 .text p {font: 400 1.05em/2.1em 'PT Sans', sans-serif;}
@@ -21,6 +22,10 @@ article > p a {font: 400 0.85em/0em 'Titillium Web', sans-serif;color:#888;}
 article > h3, article > h4, article.blanc > h4 {font: 600 0.85em 'Titillium Web', sans-serif;text-transform: uppercase;color:#999;font-weight:600;}
 
 .inner > figure p, .inner > figure p a {font: 400 1.4em/2.5em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
+p.inners a {font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;}
+
+.blanc h4 {text-transform:uppercase;letter-spacing:2px;}
+.blanc p {text-transform:lowercase;letter-spacing:2px;}
 
 .vign {font: 600 1em/2.1em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
 
