--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -395,16 +395,16 @@ box-sizing: content-box;}
 .chain b:nth-child(14) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.8s !important;}
 
 .chain-down div:first-child {width:100%; height:100%; top:0; left:0; margin:0;}
-.chain-down b {width:100%; height:40%; margin:0; animation:chain-down 3s ease-in-out infinite;}
+.chain-down b {width:100%; height:50%; margin:0; animation:chain-down 33s ease-in-out infinite;}
 
 @keyframes chain
-{0%,100%{padding:0;} 50%{padding:0 5%;}}
+{0%,100%{padding:0;} 50%{padding:0 15%;}}
 
 @keyframes chain-full
 {0%,100%{padding:0;} 50%{padding:0 10%;}}
 
 @keyframes chain-down
-{0%,100%{padding:0;} 50%{padding:3% 0;}}
+{0%,100%{padding:0;} 50%{padding:3% 10%;}}
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2),
   only screen and (-moz-min-device-pixel-ratio: 2),
