--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -202,7 +202,6 @@ article.blanc > p
 article.blanc > a, article.blanc > p a:hover {color:#fff;text-transform:lowercase;text-decoration: none;}
 
 
-
 /* TODO SLIDE DEV BLOCK BDD À RATIONALISER
 --------------------------------------------------
 #desc-s-sign,#desc-s-text,#desc-s-liter,#desc-s-video
@@ -374,7 +373,7 @@ and (-webkit-min-device-pixel-ratio: 1)
  }
 }
 
-.chain div:first-child {width:300px; height:10px; position:absolute; top:50%; left:50%;}
+.chain div:first-child {width:300px; height:10px; position:absolute; top:40%; left:50%;}
 .chain b {width:3%; height:100%; display:block; float:left; animation:chain 3s infinite;-moz-box-sizing: content-box;
 -webkit-box-sizing: content-box;
 box-sizing: content-box;}
@@ -395,22 +394,22 @@ box-sizing: content-box;}
 .chain b:nth-child(14) {background: url('../images/bg-bottom-chain.png') top left repeat-x;  animation-delay:2.8s !important;}
 
 .chain-down div:first-child {width:100%; height:100%; top:0; left:0; margin:0;}
-.chain-down b {width:100%; height:50%; margin:0; animation:chain-down 33s ease-in-out infinite;}
+.chain-down b {width:100%; height:50%; margin:0 0 3em 0; animation:chain-down 33s ease-in-out infinite;}
 
 @keyframes chain
-{0%,100%{padding:0;} 50%{padding:0 15%;}}
+{0%,100%{padding:0;} 50%{padding:15% 15%;}}
 
 @keyframes chain-full
-{0%,100%{padding:0;} 50%{padding:0 10%;}}
+{0%,100%{padding:0;} 50%{padding:0 20%;}}
 
 @keyframes chain-down
-{0%,100%{padding:0;} 50%{padding:3% 10%;}}
+{0%,100%{padding:0;} 50%{padding:3% 0;}}
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2),
   only screen and (-moz-min-device-pixel-ratio: 2),
   only screen and (-o-min-device-pixel-ratio: 2/1),
   only screen and (min-device-pixel-ratio: 2) {
-.chain b:nth-child(1) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 2em 18em; animation-delay:0.2s !important;}
+.chain b:nth-child(1) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 1em 18em; animation-delay:0.2s !important;}
 .chain b:nth-child(2) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.6s !important;}
 .chain b:nth-child(3) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.6s !important;}
 .chain b:nth-child(4) {background: url('../images/retina/bg-bottom-chain@2x.png') top left repeat-x; background-size: 26px 543px; animation-delay:0.8s !important;}
