--- a/css/typography.css
+++ b/css/typography.css
@@ -1,3 +1,7 @@
+
+/* TODO TYPOGRAPHY
+-------------------------------------------------- */
+
 header h1, figure h1 {font: 700 1.4em/46px 'Titillium Web', sans-serif;}
 figure p  {font: 400 1.35em/40px 'Roboto Condensed', sans-serif;}
 
@@ -5,7 +9,7 @@ figure p  {font: 400 1.35em/40px 'Roboto Condensed', sans-serif;}
 
 .text span {font: 400 0.95em/1.5em 'Roboto Condensed', sans-serif;text-transform: uppercase;color:#666;letter-spacing:4px;font-weight:600;}
 
-#nav li  {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
+#nav li  {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;cursor:pointer;}
 nav a {cursor:pointer;color:#7d7d79;}
 .inner figure p {font: 400 1.15em/2.2em 'Roboto Condensed', sans-serif;color:#888;}
 .inner a {font: 400 0.85em/0em 'Roboto Condensed', sans-serif;color:#777;}
