--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -44,7 +44,7 @@ div > img.tempo {float:right;margin:3em;padding:20em 0 25em 0 ;width: 100%;heigh
 .inner > figure p, .inner > figure a {margin:0 0 1em;padding:0 1em;text-align:center;}
 
 img.rules {margin:-0.3em -0.7em 0 0 ;padding:0;text-align:center;width:auto;height:2.1em;}
-p.inners {float:right;margin:0.2em 8em 1em 0;padding:0 0.5em;text-align:center;font-size: 100%;}
+p.inners {float:right;margin:0.2em 9em 1em 0;padding:0 0;text-align:center;font-size: 100%;}
 p.inners a {margin:-0.2em 0 1em 0;padding:0 0.5em;}
 
  /* RESPONSIVE CSS  TODO  & RETINA  TODO
