--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -2,10 +2,10 @@
 
 html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 
-/* HEADER HEAD CONTENT LAYOUT
+/* TODO HEADER HEAD CONTENT LAYOUT
 -------------------------------------------------- */
 
-body {width:100% inherit;background:#020109;}
+body {width:100% inherit;background:#020109 url('../images/R3D.jpg') 11em -3em no-repeat;}
 header[role="banner"] {margin:0;padding:2.3% 0 0 3.2%;width:100%;display:inline-block;}
 header[role="banner"] ul li, ul li a {list-style:none;margin:0;float:left;}
 
@@ -35,13 +35,10 @@ a.vim:hover, a.tree:hover{background-color:#fff;border:none;}
 a.vim, a.tree {background-position: 15px 5px;display: block;}
 a.vims, a.trees  {background-position: -31px 5px;display: block;}
 
-div > img.tempo {float:right;margin:3em;padding:20em 0 25em 0 ;width: 100%;height:80%;}
+div > img.tempo {float:right;margin:3em;padding:20em 0 25em 0 ;width: 100%;height:40%;}
 
 /* TODO FUNCTION
 -------------------------------------------------- */
-.inner > figure {position:relative;text-align:center;width:auto;right:4%;top:-5.2em;bottom:0;}
-.inner > figure img {margin:0 0 2em;padding:0;text-align:center;width:auto;height:2em;}
-.inner > figure p, .inner > figure a {margin:0 0 1em;padding:0 1em;text-align:center;}
 
 img.rules {margin:-0.3em -0.7em 0 0 ;padding:0;text-align:center;width:auto;height:2.1em;}
 p.inners {float:right;margin:0.2em 9em 1em 0;padding:0 0;text-align:center;font-size: 100%;}
@@ -65,7 +62,7 @@ p.inners a {margin:-0.2em 0 1em 0;padding:0 0.5em;}
    }
 }
 
-/* BOX OVERLAY STRIP CSS
+/* TODO BOX OVERLAY STRIP CSS
 -------------------------------------------------- */
 .sp-content {float: none;width: auto;margin:3% 3.2%;height: auto;overflow: hidden;background:#020109 url('../images/retina/teasing@2x.jpg') top left no-repeat;background-size:100% 100%;box-shadow:1px 1px 1px 1px  rgba(0,0,0,0.2);-moz-box-sizing:border-box;box-sizing:border-box;
 box-shadow: 1px 1px 1px #111;}
@@ -324,6 +321,8 @@ img.centered,.aligncenter {display: block;margin: 0 auto 10px;}
   }
 }
 -------------------------------------------------- */
+
+
 @media only screen and (min-device-width: 240px) and (max-device-width: 300px)  {
 .head .text p {display:inline-table;width:93%;line-height:20px;font-size:80%;margin:30px 0;}
 body .inner > figure img {width: 80%;}
