--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -5,7 +5,7 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2
 /* TODO HEADER HEAD CONTENT LAYOUT
 -------------------------------------------------- */
 
-body {width:100% inherit;background:#020109 url('../images/R3D.jpg') 11em -3em no-repeat;}
+body {width:100% inherit;background:#020109 url('../images/retina/bg-sign@2x.png') 11em -3em repeat;}
 header[role="banner"] {margin:0;padding:2.3% 0 0 3.2%;width:100%;display:inline-block;}
 header[role="banner"] ul li, ul li a {list-style:none;margin:0;float:left;}
 
