--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -21,7 +21,7 @@ box-shadow: 0 1px 25px #111;}
 
 /* TODO FUNCTION NAV
 -------------------------------------------------- */
-#nav {position:relative;top:0;let:-2em;z-index: 3;}
+#nav {position:relative;top:0;left:0;z-index: 3;}
 #nav a {cursor:pointer;}
 #nav ul{float:left;list-style:none;margin:0;padding:0;text-align:left;display:inline-block;}
 #nav ul li {margin:0.3em 0 0.5em;padding: 0 0.3em;text-align:left;}
