--- a/css/typography.css
+++ b/css/typography.css
@@ -27,7 +27,9 @@ p.inners a {font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;}
 .blanc h4 {text-transform:uppercase;letter-spacing:2px;}
 .blanc p {text-transform:lowercase;letter-spacing:2px;}
 
-.vign {font: 600 1em/2.1em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
+.vign {font: 600 1em/2.1em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#fff;letter-spacing:2px;text-decoration: none;}
+.vign a {font: 600 1em/2.1em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#fff;letter-spacing:2px;text-decoration: underline;}
+.vign a:hover {font: 600 1em/2.1em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#fff;letter-spacing:2px;text-decoration: none;}
 
 .sp-slider > li h1  {font-family:'PT Sans', sans-serif;font-weight:300;}
 #s-sign h2, #s-text h2, #s-liter h2, #s-video h2{font: 500 0.80em/25px 'Roboto Condensed', sans-serif;}
