--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -21,10 +21,10 @@ box-shadow: 0 1px 25px #111;}
 
 /* TODO FUNCTION NAV
 -------------------------------------------------- */
-#nav {position:relative;top:0;left:0;z-index: 3;}
+#nav {position:relative;top:-2px;left:0;z-index: 3;}
 #nav a {cursor:pointer;}
 #nav ul{float:left;list-style:none;margin:0;padding:0;text-align:left;display:inline-block;}
-#nav ul li {margin:0.3em 0 0 0.1em;padding: 0 0.5em 0 0;text-align:left;}
+#nav ul li {margin:0 0 0 0.1em;padding: 0.3em 0.5em 0 0;text-align:left;}
 a#signs, a#txt, a#liter, a#vid, a#signers, a#texts, a#liters, a#vids{cursor:pointer;display: none;width:100%;text-decoration:none;display:inline-block;}
 #nav ul li.active a, nav a:hover {color:#fff;cursor:pointer;text-align:left;}
 
@@ -42,7 +42,7 @@ div > img.tempo {float:right;margin:3em;padding:20em 0 25em 0 ;width: 100%;heigh
 
 img.rules {margin:-0.3em -0.7em 0 0 ;padding:0;text-align:center;width:auto;height:2.1em;}
 p.inners {float:right;margin:-0.2em 9em 1em 0;padding:0 0;text-align:center;font-size: 100%;}
-p.inners a {margin:-0.2em 0 1em 0;padding:0 0.5em;}
+p.inners a {margin:0 0 1em 0;padding:0 0.5em;}
 
  /* RESPONSIVE CSS  TODO  & RETINA  TODO
 -------------------------------------------------- */
