--- a/css/typography.css
+++ b/css/typography.css
@@ -31,5 +31,5 @@ p.inners a {font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;}
 .vign a {font: 600 1em/2.1em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#fff;letter-spacing:2px;text-decoration: underline;}
 .vign a:hover {font: 600 1em/2.1em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#fff;letter-spacing:2px;text-decoration: none;}
 
-.sp-slider > li h1  {font-family:'Titillium Web', sans-serif;font-weight:300;color:#888;}
+.sp-slider > li h1  {font: 200 1em/2.1em 'Titillium Web', sans-serif;font-weight:600;color:#888;}
 #s-sign h2, #s-text h2, #s-liter h2, #s-video h2{font: 500 0.80em/25px 'Roboto Condensed', sans-serif;}
