--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -9,8 +9,8 @@ body {width:100% inherit;background:#020109 url('../images/retina/bg-sign@2x.png
 header[role="banner"] {margin:0;padding:2% 0 0 3.2%;width:100%;display:inline-block;}
 header[role="banner"] ul li, ul li a {list-style:none;margin:0;float:left;}
 
-#rules {width: 100%;height: 100%;color: #999;top:-15px;overflow: hidden;position: relative;z-index: 3;}
-.head .inner, .section-inner {padding:0% 4% 0% 11%;margin:0}
+#rules {width: 100%;height: 100%;color: #999;top:-1em;overflow: hidden;position: relative;z-index: 3;}
+.head .inner, .section-inner {padding:0% 4% 0.5% 11%;margin:0}
 .head .text p {display:inline-block;margin:2% 3% 0 1.3%;width:27%;}
 
 #block-video {position: relative;top: 0;left: 0;width: 100%;height:90%;z-index:100;box-shadow:0px 0px 2px rgba(0,0,0,0.4);-moz-box-sizing:border-box;box-sizing:border-box;
@@ -42,7 +42,7 @@ div > img.tempo {float:right;margin:3em;padding:20em 0 25em 0 ;width: 100%;heigh
 -------------------------------------------------- */
 
 img.rules {margin:-0.3em -0.7em 0 0 ;padding:0;text-align:center;width:auto;height:2.1em;}
-p.inners {float:right;margin:-0.3em 8em 0em 0;padding:0 0;text-align:center;font-size: 100%;}
+p.inners {float:right;margin:-0.3em 9em 0em 0;padding:0 0;text-align:center;font-size: 100%;}
 p.inners a {margin:0 0 1em 0;padding:0 0.5em;}
 
  /* RESPONSIVE CSS  TODO  & RETINA  TODO
