--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -21,7 +21,7 @@ box-shadow: 0 1px 35px #111;}
 
 /* TODO FUNCTION NAV
 -------------------------------------------------- */
-#nav {position:relative;top:0;left:0;z-index: 3;}
+#nav {position:relative;top:0;left:0;z-index: 3;padding: 0 0.5em 0 0;}
 #nav a {cursor:pointer;}
 #nav ul{float:left;list-style:none;margin-top:0;padding:0;text-align:left;display:inline-block;}
 #nav ul li {margin:0 0 0 0.1em;padding: 0 0.5em 0 0;text-align:left;}
@@ -30,12 +30,13 @@ a#signs, a#txt, a#liter, a#vid, a#signers, a#texts, a#liters, a#vids{cursor:poin
 
 
 a#vims, a#trees {background-color:#fff;border:none;cursor:pointer;display: none;padding:0}
-a.vim, a.vims, a.tree, a.trees {background:#221c26 url("../images/closeopenleftright.png") no-repeat 0 0;background-size:75px 98px;height:27px;width:60px;text-indent:-4000px;display:block;margin: 0 auto;position: relative;z-index: 1;cursor:pointer;border:none;}
+a.vim, a.vims, a.tree, a.trees {background:#555 url("../images/closeopenleftright.png") no-repeat 0 0;background-size:75px 98px;height:27px;width:60px;text-indent:-4000px;display:block;margin: 0 auto;position: relative;z-index: 1;cursor:pointer;border:none;}
 a.vim:hover, a.tree:hover{background-color:#fff;border:none;}
 a.vim, a.tree {background-position: 15px 5px;display: block;}
 a.vims, a.trees  {background-position: -31px 5px;display: block;}
 
-div > img.tempo {float:right;margin:3em;padding:20em 0 25em 0 ;width: 100%;height:40%;}
+div > img.tempo {float:right;margin:3em;padding:20em 0 10em 0 ;width: 100%;height:40%;background: url('../images/retina/bg-sign@2x.png') 0 0 repeat-x;}
+#tempo {position:relative; top:-10em;}
 #press p {padding-bottom:2em}
 
 /* TODO FUNCTION
