--- a/css/typography.css
+++ b/css/typography.css
@@ -22,8 +22,7 @@ article > p a {font: 400 0.85em/0em 'Titillium Web', sans-serif;color:#888;}
 article > h3, article > h4, article.blanc > h4 {font: 600 0.85em 'Titillium Web', sans-serif;text-transform: uppercase;color:#999;font-weight:600;}
 
 .inner > figure p, .inner > figure p a {font: 400 1.4em/2.5em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
-p.inners a {font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;}
-
+p.inners a {font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;font-weight:500;}
 .blanc h4 {text-transform:uppercase;letter-spacing:2px;}
 .blanc p {text-transform:lowercase;letter-spacing:2px;}
 
