--- a/css/typography.css
+++ b/css/typography.css
@@ -7,7 +7,7 @@ figure p  {font: 400 1.35em/40px 'Roboto Condensed', sans-serif;}
 
 #switch-navigation p {font: 400 1.5em/2.1em 'Roboto Condensed', sans-serif;text-transform: uppercase;color:#888;letter-spacing:2px;font-weight:600;}
 
-.text span {font: 400 0.95em/1.5em 'Roboto Condensed', sans-serif;text-transform: uppercase;color:#666;letter-spacing:4px;font-weight:600;}
+.text span {font: 700 1.13em/1.5em 'Roboto Condensed', sans-serif;color:#888;text-transform: uppercase;color:#666;letter-spacing:4px;font-weight:900;}
 
 #nav li  {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;cursor:pointer;}
 nav a {cursor:pointer;color:#7d7d79;}
