--- a/css/typography.css
+++ b/css/typography.css
@@ -6,7 +6,6 @@ header h1, figure h1 {font: 700 1.4em/46px 'Titillium Web', sans-serif;}
 figure p  {font: 400 1.35em/40px 'Roboto Condensed', sans-serif;}
 
 #switch-navigation p {font: 400 1.5em/2.1em 'Roboto Condensed', sans-serif;text-transform: uppercase;color:#888;letter-spacing:2px;font-weight:600;}
-
 .text span {font: 700 1.13em/1.5em 'Roboto Condensed', sans-serif;color:#888;text-transform: uppercase;color:#666;letter-spacing:4px;font-weight:900;}
 
 #nav li  {font: 400 1.3em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;cursor:pointer;}
@@ -21,10 +20,13 @@ article > p {font: 400 1em/2.1em 'Titillium Web', sans-serif;color:#888;}
 article > p a {font: 400 0.85em/0em 'Titillium Web', sans-serif;color:#888;}
 article > h3, article > h4, article.blanc > h4 {font: 600 0.85em 'Titillium Web', sans-serif;text-transform: uppercase;color:#999;font-weight:600;}
 
-.inner > figure p, .inner > figure p a {font: 400 1.4em/2.5em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
-p.inners a {font: 400 1em/40px 'Roboto Condensed', sans-serif;color:#C0C2C1;font-weight:500;}
 .blanc h4 {text-transform:uppercase;letter-spacing:2px;}
 .blanc p {text-transform:lowercase;letter-spacing:2px;}
+
+.inner > figure p, .inner > figure p a {font: 400 1.4em/2.5em 'Roboto Condensed', sans-serif;font-weight:800;text-transform: uppercase;color:#C0C2C1;letter-spacing:2px;}
+
+.inners a {font: 400 1.2em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#888;letter-spacing:2px;cursor:pointer;text-decoration: none;}
+.inners a:hover {font: 400 1.2em 'Roboto Condensed', sans-serif;font-weight:600;text-transform: uppercase;color:#888;letter-spacing:2px;cursor:pointer;}
 
 .vign {font: 600 1em/2.1em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#fff;letter-spacing:2px;text-decoration: none;}
 .vign a {font: 600 1em/2.1em 'Roboto Condensed', sans-serif;font-weight:500;text-transform: uppercase;color:#fff;letter-spacing:2px;text-decoration: underline;}
