--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -5,12 +5,12 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2
 /* TODO HEADER HEAD CONTENT LAYOUT
 -------------------------------------------------- */
 
-body {width:100% inherit;background:#020109 url('../images/retina/bg-sign@2x.png') 11em -3em repeat;}
-header[role="banner"] {margin:0;padding:2% 0 0 3.2%;width:100%;display:inline-block;}
+body {width:100% inherit;background: url('../images/retina/bg-sign@2x.png') 0 0.5em repeat-x;}
+header[role="banner"] {margin:0;padding:2% 0 0 3.2%;width:100%;display:inline-block;line-height:1em}
 header[role="banner"] ul li, ul li a {list-style:none;margin:0;float:left;}
 
 #rules {width: 100%;height: 100%;color: #999;top:-1em;overflow: hidden;position: relative;z-index: 3;}
-.head .inner, .section-inner {padding:0% 4% 0.5% 11%;margin:0}
+.head .inner, .section-inner {padding:0% 4% 0.1% 11%;margin:0}
 .head .text p {display:inline-block;margin:2% 3% 0 1.3%;width:27%;}
 
 #block-video {position: relative;top: 0;left: 0;width: 100%;height:90%;z-index:100;box-shadow:0px 0px 2px rgba(0,0,0,0.4);-moz-box-sizing:border-box;box-sizing:border-box;
@@ -21,7 +21,7 @@ box-shadow: 0 1px 35px #111;}
 
 /* TODO FUNCTION NAV
 -------------------------------------------------- */
-#nav {position:relative;top:0.25em;left:0;z-index: 3;padding: 0 0.5em 0 0;}
+#nav {position:relative;top:0.3em;left:0;z-index: 3;padding: 0 0.5em 0 0;}
 #nav a {cursor:pointer;}
 #nav ul{float:left;list-style:none;margin-top:0;padding:0;text-align:left;display:inline-block;}
 #nav ul li {margin:0 0 0 0.1em;padding: 0 0.5em 0 0;text-align:left;}
