--- a/css/master_eponyme.css
+++ b/css/master_eponyme.css
@@ -5,7 +5,7 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2
 /* TODO HEADER HEAD CONTENT LAYOUT
 -------------------------------------------------- */
 
-body {width:100% inherit;background: url('../images/retina/bg-sign@2x.png') 0 0.5em repeat-x;}
+body {width:100%;background: url('../images/retina/bg-sign@2x.png') 0 0.5em repeat-x;}
 header[role="banner"] {margin:0;padding:2% 0 0 3.2%;width:100%;display:inline-block;line-height:1em}
 header[role="banner"] ul li, ul li a {list-style:none;margin:0;float:left;}
 
@@ -35,7 +35,7 @@ a.vim:hover, a.tree:hover{background-color:#fff;border:none;}
 a.vim, a.tree {background-position: 15px 5px;display: block;}
 a.vims, a.trees  {background-position: -31px 5px;display: block;}
 
-div > img.tempo {float:right;margin:3em;padding:20em 0 10em 0 ;width: 100%;height:40%;background: url('../images/retina/bg-sign@2x.png') 0 0 repeat-x;}
+div > img.tempo {float:right;margin:-3em;padding:20em 0 10em 0 ;width: 100%;height:40%;}
 #tempo {position:relative; top:-10em;}
 #press p {padding-bottom:2em}
 
@@ -66,7 +66,7 @@ p.inners a {margin:0 0 1em 0;padding:0 0.5em;}
 
 /* TODO BOX OVERLAY STRIP CSS
 -------------------------------------------------- */
-.sp-content {float: none;width: auto;margin:3% 3.2%;height: auto;overflow: hidden;background:#020202 url('../images/retina/teasing@2x.jpg') top left no-repeat;background-size:100% 100%;box-shadow:1px 1px 1px 1px  rgba(0,0,0,0.2);-moz-box-sizing:border-box;box-sizing:border-box;
+.sp-content {float: none;width: auto;margin:3% 3.2%;height: auto;overflow: hidden;background:#020202 url('../images/MJ-HLG-NR.jpg') top left no-repeat;background-size:100% 100%;box-shadow:1px 1px 1px 1px  rgba(0,0,0,0.2);-moz-box-sizing:border-box;box-sizing:border-box;
 box-shadow: 1px 1px 1px #111;}
 
 .sp-slideshow input {display:none;}
